Fix header alignment in phone

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -113,6 +113,7 @@ a.secondary {
 }
 
 .header h1 {
+  margin-top: 100px;
   font-size: 2.5rem;
   margin-bottom: 0.5rem;
 }
